# just-userbot

./: .env  .gitignore  README.md  filters.py  manager.py  my_account.session  my_account.session-journal  pyproject.toml  requirements.txt  userbot.py  yes  yes.pub
misc/: __init__.py  filters.py  utils.py
modules/: chatgpt.py  commands.py  heart.py  music.py  pc_control.py  typing.py
plugins/: TextToSpeech.py  ai.py  arts.py  calculator.py  chatgpt.py  commands.py  count.py  exec.py  heart.py  jokes.py  math.py  music.py  naurok.py  nekobin.py  note.py  parsemode.py  pc_control.py  pexels.py  processing.py  qrcode.py  twitch.py  typing.py  variables.py  voice.py
