[tool.poetry]
name = "userbot"
version = "0.1.0"
description = ""
authors = ["ShadowRezi <urijozimko4@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pyrogram = "2.0.106"
tgcrypto = "1.2.5"
uvloop = "^0.19.0"
g4f = "^0.2.1.5"
bs4 = "^0.0.2"
fake-useragent = "^1.4.0"
python-dotenv = "^1.0.1"
qrcode = "^7.4.2"
opencv-python = "4.8.0.74"
aiohttp = "^3.9.3"
aiofiles = "^23.2.1"
gtts = "^2.5.1"
pynekobin = "^3.1"
yt-dlp = "2023.10.13"
youtube-search-python = "^1.6.6"
youtube-search = "^2.1.2"
colorama = "^0.4.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

